# web-crawler

./: README.md  crawler.py  pyproject.toml  setup.py  simple-crawler.py
