[project]
name = "web-crawler"
version = "0.1.0"
description = "A simple web crawler demo"
authors = [
    {name = "Nick Baynham",email = "nickbaynham@gmail.com"}
]
license = {text = "CC0 1.0 Universal"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
