[project]
name = "web-crawler"
version = "0.1.0"
description = "A simple webcrawler demo"
authors = [
    {name = "Nick Baynham",email = "nickbaynham@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
